corpus/c/asm_inline/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [syntax] impossible constraint in ‘asm’ @ src/main.c:3:5
raw : impossible constraint in ‘asm’
| src/main.c:3:5
|     __asm__("" : : "i"(value));
|     ^